[package]
name = "kubesess"
version = "1.2.5"
authors = ["https://github.com/ramilito"]
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
serde_yaml = "0.9.3"
serde = { version = "1.0.141", features = ["derive"] }
ctrlc = "3.2.3"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0"
