[package]
name = "kubesess"
version = "1.2.7"
authors = ["https://github.com/ramilito"]
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0"
serde_yaml = "0.9.3"
serde = { version = "1.0.141", features = ["derive"] }
lazy_static = "1.4.0"
skim = "0.9.4"

[dev-dependencies]
assert_cmd = "2.0"
