[package]
name = "kubesess"
version = "2.0.1"
authors = ["https://github.com/ramilito"]
edition = "2021"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
dirs = "4.0"
serde_yaml = "0.9.3"
serde = { version = "1.0.141", features = ["derive"] }
lazy_static = "1.4.0"
skim = "0.10.4"
thiserror = "1.0.56"
kube = { version = "0.96.0", features = ["config"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
serial_test = "0.5"
